Gramatica
Esta es la gramática:

    1.  Σ = { ADDOP, MULTOP, '(', ')', NUM, ',', '=', ID, 'IF', 'ELSE', 'THEN', BOOLEAN },
    2.  V = {  compare, conditional, assign, comma, expression, term, factor }
    Producciones:
        1.  assign → ID '=' expression | comma
        2.  comma → (conditional | expression) (',' (conditional | expression))*
        3.  conditional → 'IF' expression 'THEN' expression 'ELSE' expression
        4.  expression → term (( ADDOP term)* compare? | assign)
        5.  compare → expression COMPARISONOPERATOR expression
        6.  term → factor (MULTOP factor)*
        7.  factor → NUM | ID | BOOLEAN | '(' assign ')' | conditional
